feat(auth): implement authentication API service with sign-in, email verification, and Google OAuth
feat(api): create barrel exports for API modules

feat(users): add user profile management API

feat(auth): create authentication layout and screens for login, email input, and code verification

feat(auth): implement email screen for sending verification codes

feat(auth): implement login screen with Google and email options

feat(auth): implement verification screen for entering received codes

chore(config): centralize API configuration and endpoints

chore(env): set up environment variable management for API URLs and timeouts

feat(storage): implement secure storage service for authentication tokens

feat(context): create authentication context for managing user state and authentication flows

feat(hooks): add various utility hooks for theming and layout management

feat(types): define standardized types for API responses and authentication

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo_peladapp",
-    "slug": "expo_peladapp",
+    "name": "Peladapp",
+    "slug": "peladapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -38,7 +38,9 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "expo-secure-store",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
