--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.27",
     "expo-auth-session": "~7.0.10",
     "expo-constants": "~18.0.11",
